# scikit-feature-interpreter

./: pyproject.toml  setup.cfg
.github/workflows/: publish.yml  testing.yml
skinterpret/feature_extraction/: text.py
tests/feature_extraction/: test_text.py
