[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-feature-interpreter"
description = "scikit-learn API compatible feature interpreter"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "nikkie", email = "takuyafjp+develop@gmail.com" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["scikit-learn"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/ftnext/scikit-feature-interpreter"

[project.optional-dependencies]
testing = ["pytest", "pytest-randomly"]
lint = ["flake8", "black", "isort"]
dev = ["wheel", "build", "twine"]

[tool.setuptools.dynamic]
version = { attr = "skinterpret.__version__" }
